src/styles/global.scss
@use "sass:color";
@import "./bootstrap";

// 8. Add additional custom code here

// Base
* {
  scrollbar-color: $primary $dark;
}

@media only screen and (width >=900px) {
  * {
    scrollbar-width: thin;
  }

  *::-webkit-scrollbar {
    width: 8px;
  }
}

@media (prefers-reduced-motion: no-preference) {
  * {
    scroll-behavior: smooth;
  }

  html {
    scroll-behavior: auto;
  }
}

::-webkit-scrollbar-track {
  background: $dark;
}

::-webkit-scrollbar-thumb {
  background: $primary;
}

::selection {
  background: rgba($primary, 0.5);
  color: $light;
}

// Link adjustments
a,
.nav-link {
  transition: 0.25s;
  text-decoration: none;
}

.alert a {
  color: #0d6efd;
}

.alert a:hover {
  color: #0a58ca;
}

.form-range-value {
  font-weight: lighter;
  font-size: 0.9rem;
}

// Button
.btn-primary {
  --bs-btn-color: $white;
  --bs-btn-hover-color: $white;
  --bs-btn-active-color: $white;
}

.btn-outline-primary {
  --bs-btn-hover-color: $white;
}

// Classes
.img-separator {
  height: 40vh;
  margin-bottom: 2rem;
}

footer {
  color: rgb(187 187 187);
}

// Elements
footer:last-of-type {
  padding-bottom: 2rem;
}

// Header
header {
  min-height: 100vh;
}

// Sections
section {
  padding-top: 2rem;
  padding-bottom: 2rem;
}

// Header logo
.img-logo {
  height: 10rem;
}

.img-logo-sm {
  height: 5rem;
}

// Large image compare modal
.modal-lg {
  max-width: 75%;
}

// FPS bars
.fps-bar .progress-bar {
  padding-left: 1rem;
  text-align: left;
  will-change: width;
}

.progress.fps-bar {
  --bs-progress-height: 1.25rem;
}

.btn-outline-secondary {
  border: $dark 1px solid;
}

// Homepage
#action-container {
  background: linear-gradient(90deg,
      rgba(38, 50, 56, 0.1) 10%,
      mix(rgba(0, 150, 136, 0.9), rgba(38, 50, 56, 0.1), 50%) 30%,
      rgba(0, 150, 136, 1) 50%,
      mix(rgba(0, 150, 136, 0.9), rgba(38, 50, 56, 0.1), 50%) 70%,
      rgba(38, 50, 56, 0.1) 90%);
  margin-left: -50vw;
  margin-right: -50vw;
  padding-top: 1.5rem;
  padding-bottom: 0.1rem;
}

#action-container a:not(.btn) {
  color: #fff;
}

#action-container a:not(.btn):hover {
  color: lighten($teal, 50%);
}

// Base
html {
  scroll-padding-top: 89px;
}

html,
body {
  width: 100vw;
  overflow-x: hidden;
}

.h1,
.h2,
.h3,
.h4,
.h5,
.h6,
h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 300;
}

b {
  font-weight: 600;
}

.card br {
  margin: 0.5rem;
}

.row br {
  margin: initial;
}

// Nav tabs
.nav.nav-pills.bg-teal-nav {
  --bs-nav-link-hover-color: #fff;
}

.nav.nav-pills.bg-teal-nav .nav-link:not(.active) {
  background: rgb(0 150 136 / 60%);
}

.nav.nav-pills.bg-teal-nav .nav-link:hover:not(.active) {
  background: #05746c;
}

.nav.nav-tabs {
  --bs-nav-tabs-link-active-bg: var(--bs-primary);
  --bs-nav-tabs-link-active-color: #fff;
  --bs-nav-tabs-border-width: 0;

  border-bottom: 2px solid $primary;
}

// Form adjustments
.form-check-input {
  border-color: color.adjust(#000, $lightness: 46%);
}

.form-switch {
  .form-check-input {
    border-radius: $form-switch-border-radius;
    width: 2.5rem;
  }
}

.form-check-label {
  margin-left: 0.5rem;
}

.form-range {
  &::-webkit-slider-thumb {
    border-radius: $form-range-thumb-border-radius;
  }

  &::-moz-range-thumb {
    border-radius: $form-range-thumb-border-radius;
  }
}

.form-check-input:checked[type="radio"] {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23009688' stroke='%23fff'/%3e%3c/svg%3e"),
    var(--bs-gradient);
}

.text-light.form-control::placeholder {
  color: rgb(255 255 255 / 90%);
}

// Navbar
.navbar {
  --bs-navbar-padding-x: 1rem;
  --bs-navbar-padding-y: 0.4rem;

  z-index: 5;
}

.navbar-brand {
  --bs-navbar-brand-margin-end: 0;
}

.navbar-selector {
  margin-right: 1rem;
  --bs-nav-link-color: #fff;
  --bs-nav-link-font-size: var(--bs-navbar-brand-font-size);
}

.navbar-selector .dropdown-menu {
  background-color: $teal;
}

.form-select-lg {
  padding-left: 0.5rem;
}

// Quickplay, todo, move to its own module
.map-ban-remove:hover {
  color: var(--bs-danger);
}

.quickpick-server-item:hover {
  background: #352a22;
}

.quickpick-server-item.active {
  background: #463931;
}

// React select https://github.com/JedWatson/react-select/issues/2345#issuecomment-843674624
:root {
  --bs-select-padding-y: #{$form-select-padding-y};
  --bs-select-padding-x: #{$form-select-padding-x};
  --bs-select-font-size: #{$form-select-font-size};
  --bs-select-indicator-padding: #{$form-select-indicator-padding};
  --bs-select-font-weight: #{$form-select-font-weight};
  --bs-select-line-height: #{$form-select-line-height};
  --bs-select-color: #{$form-select-color};
  --bs-select-bg: #{$form-select-bg};
  --bs-select-disabled-color: #{$form-select-disabled-color};
  --bs-select-disabled-bg: #{$form-select-disabled-bg};
  --bs-select-disabled-border-color: #{$form-select-disabled-border-color};
  --bs-select-bg-position: #{$form-select-bg-position};
  --bs-select-bg-size: #{$form-select-bg-size};
  --bs-select-indicator: #{escape-svg($form-select-indicator)};
  --bs-select-feedback-icon-padding-end: #{$form-select-feedback-icon-padding-end};
  --bs-select-feedback-icon-position: #{$form-select-feedback-icon-position};
  --bs-select-feedback-icon-size: #{$form-select-feedback-icon-size};
  --bs-select-border-width: #{$form-select-border-width};
  --bs-select-border-color: #{$form-select-border-color};
  --bs-select-focus-border-color: #{$form-select-focus-border-color};
  --bs-select-padding-y-sm: #{$form-select-padding-y-sm};
  --bs-select-padding-x-sm: #{$form-select-padding-x-sm};
  --bs-select-font-size-sm: #{$form-select-font-size-sm};
  --bs-select-padding-y-lg: #{$form-select-padding-y-lg};
  --bs-select-padding-x-lg: #{$form-select-padding-x-lg};
  --bs-select-font-size-lg: #{$form-select-font-size-lg};

  @if $enable-rounded {
    --bs-select-border-radius: #{$form-select-border-radius};
  }

  @else {
    --bs-select-border-radius: 0;
  }
}

